# adept-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  worker.py
app/config/: settings.py
app/core/: config.py  logging.py
app/db/: database.py  models.py  session.py
app/jobs/: claimer.py  retry.py
tests/: conftest.py  test_health.py  test_job_claimer.py  test_readiness.py  test_retry.py
